<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:id="@+id/main_page"
            android:title="@string/main"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:checked="true"
            app:showAsAction="never"/>

        <item android:id="@+id/clothes_page"
            android:title="@string/clothes"
            android:icon="@drawable/clothes_icon"
            app:showAsAction="never"/>

        <item android:id="@+id/gold_page"
            android:title="@string/gold"
            android:icon="@drawable/gold_icon"
            app:showAsAction="never"/>

        <item android:id="@+id/land_page"
            android:title="@string/lands"
            android:icon="@drawable/land"
            app:showAsAction="never"/>
    </group>

    <item android:title="@string/support" app:showAsAction="never">
        <menu>
            <item android:id="@+id/help"
                android:title="@string/help"
                android:icon="@android:drawable/ic_menu_help"/>
            <item android:id="@+id/feedback"
                android:title="@string/hopes"
                android:icon="@drawable/hope"/>

        </menu>
    </item>

    <item android:id="@+id/uploadItem"
        android:title="@string/help"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always"/>

</menu>