<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_user"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <EditText
        android:id="@+id/mobile_number"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="number"
        android:hint="@string/mobile_number"
        android:drawableRight="@drawable/ic_mobile"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:gravity="right"/>





    <EditText
        android:id="@+id/password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:drawableRight="@drawable/ic_password"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:gravity="right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_input"
        android:layout_gravity="right"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:textColor="@color/errorInput"
        android:visibility="gone"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/button_side_margin"
        android:layout_marginRight="@dimen/button_side_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:background="@drawable/register_button_background"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_to_register"
        android:text="@string/are_you_registered"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/edit_text_margin"
        android:layout_marginRight="@dimen/edit_text_margin"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        />


</LinearLayout>