<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    tools:context=".fragment.UpdateInfoFragment">

    <EditText
        android:id="@+id/user_name"
        android:layout_height="wrap_content"
        android:layout_width="250dp"
        android:inputType="text"
        android:hint="@string/user_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:gravity="start"/>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/personal_image_to_upload"
            android:src="@drawable/ic_image_placeholder"
            android:contentDescription="@string/upload_image"
            android:scaleType="centerCrop" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/click_to_upload"
            android:text="@string/upload_image"
            android:foregroundGravity="bottom"
            android:layout_gravity="bottom|center_horizontal"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save_changes"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFF"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save_changes"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_image"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/delete_image"
        android:layout_marginTop="8dp"/>


</LinearLayout>