<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uploadItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar_main" android:id="@+id/toolbar"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorItem"
            android:elevation="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_name_edit_text"
                android:hint="@string/item_name"
                android:background="@android:drawable/editbox_background"            android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:inputType="text"/>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_category_spinner"
                android:background="@android:drawable/spinner_dropdown_background"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_price_edit_text"
                android:hint="@string/item_price"
                android:background="@android:drawable/editbox_background"            android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:inputType="text"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_state_spinner"
                android:background="@android:drawable/spinner_dropdown_background"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/empty_image"
                    android:id="@+id/image_uploaded" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="32dp">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/file_attach"
                        android:background="@mipmap/attach"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/camera_attach"
                        android:background="@mipmap/camera"/>
                </LinearLayout>



            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/item_description_edit_text"
                android:hint="@string/item_description"
                android:background="@android:drawable/editbox_background"
                android:layout_marginRight="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:inputType="text"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_insert"
                android:text="@string/btn_insert"
                android:layout_gravity="center"
                android:background="@android:color/background_light"
                android:elevation="6dp"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </RelativeLayout>


</ScrollView>